--- a/mini_project/mapAPI/templates/mapAPI/main_v2.0.html
+++ b/mini_project/mapAPI/templates/mapAPI/main_v2.0.html
@@ -258,6 +258,8 @@
 
     .container-fluid2 {
       padding: 1px 50px;
+      font-family: 나눔바른고딕;
+      font-size: 20px;
     }
 
     .margin {
@@ -480,7 +482,7 @@
 
 <body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="60">
 
-  <nav class="navbar navbar-default navbar-fixed-top" style="height: 70px;">
+  <nav class="navbar navbar-default navbar-fixed-top" style="height: 70px;" id="menu-fixed">
     <div class="container">
       <div class="navbar-header">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
@@ -490,7 +492,7 @@
         </button>
         <a class="navbar-brand" href="#myPage"><img src="{% static 'mapAPI/logo.jpg' %}" width="120" alt="logo"></a>
       </div>
-      <div class="collapse navbar-collapse" id="myNavbar" style="margin-top: 10px;">
+      <div class="collapse navbar-collapse" id="myNavbar" style="margin-top: 10px; font-family: 나눔바른고딕;">
         <ul class="nav navbar-nav navbar-right">
           {% if request.session.user_id %}
           <li><a data-toggle="modal" data-target="#myinfoModal" id="my_page">My Page</a></li>
@@ -507,14 +509,14 @@
 
   <div class="jumbotron text-center">
     <h5>댕댕이와 함께할 장소는 어디인가요?</h5>
-    <h3>함개닷컴에서 반려견과 함께할 여정을 계획해보세요</h3>
+    <h3>함께가개에서 반려견과 함께할 여정을 계획해보세요</h3>
 
     <form onsubmit="searchPlaces(); return false;">
       <div class="search_location">
         <div class="row">
           <div class="col-xs-3 col-sm-offset-2">
             <label for="search_location"></label>
-            <input type="text" class="form-control input-lg" name="search_location" id="search_location" value="서울 강남구"
+            <input type="text" class="form-control input-lg" name="search_location" id="search_location"
               placeholder="주소 (ex. 서울 강남구)" value="" class="pac-target-input" autocomplete="on"
               style="margin-left: 80px;font-family: 나눔바른고딕 Light;">
             <i class="locate-me loading"></i>
@@ -561,7 +563,7 @@
   <div class="modal fade" id="loginModal" role="dialog">
     <div class="modal-dialog">
       <!-- Modal content-->
-      <div class="modal-content col-sm-8 col-sm-offset-2" style="margin-top: 60px;">
+      <div class="modal-content col-sm-8 col-sm-offset-2" style="margin-top: 60px;font-family: 나눔바른고딕;">
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal">&times;</button>
           <h4 class="modal-title">로그인</h4>
@@ -588,7 +590,7 @@
   <div class="modal fade" id="joinModal" role="dialog">
     <div class="modal-dialog">
       <!-- Modal content-->
-      <div class="modal-content col-sm-8 col-sm-offset-2" style="margin-top: 60px;">
+      <div class="modal-content col-sm-8 col-sm-offset-2" style="margin-top: 60px;font-family: 나눔바른고딕;">
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal">&times;</button>
           <h4 class="modal-title">회원가입</h4>
@@ -621,7 +623,7 @@
   <div class="modal fade" id="myinfoModal" role="dialog">
     <div class="modal-dialog">
       <!-- Modal content-->
-      <div class="modal-content col-sm-8 col-sm-offset-2" style="margin-top: 60px;">
+      <div class="modal-content col-sm-8 col-sm-offset-2" style="margin-top: 60px;font-family: 나눔바른고딕;">
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal">&times;</button>
           <h4 class="modal-title">회원정보</h4>
@@ -653,7 +655,7 @@
   <div class="modal fade" id="modiinfo" role="dialog">
     <div class="modal-dialog">
       <!-- Modal content-->
-      <div class="modal-content col-sm-8 col-sm-offset-2" style="margin-top: 60px;">
+      <div class="modal-content col-sm-8 col-sm-offset-2" style="margin-top: 60px;font-family: 나눔바른고딕;">
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal">&times;</button>
           <h4 class="modal-title">회원정보</h4>
@@ -708,12 +710,11 @@
 
 
   <div id="buttons_result" class="container-fluid" style="display:none;">
-    <button type="button" class="btn btn-default btn-block btn-lg" id="add1" style="width: 900px;margin:0 auto">추가 행선지
-      검색</button>
+    <button type="button" class="btn btn-default btn-block btn-lg" id="add1" style="width: 900px;margin:0 auto;font-family: 나눔바른고딕 Light;">다른 카테고리 검색하기</button>
     <form action="">
     <input type="hidden" value=click_list>
       <button type="submit" class="btn btn-default btn-block btn-lg bg-orange" id="close1"
-      style="width: 900px;margin:0 auto;margin-top: 10px;">전체 경로 길찾기</button>
+      style="width: 900px;margin:0 auto;margin-top: 10px;font-family: 나눔바른고딕 Light;">선택한 장소들의 최적 경로 찾기</button>
     </form>
   </div>
 
@@ -752,6 +753,7 @@
     var input_addr = "서울 강남구"; // 초기값
     var input_cat = "애견카페"; // 초기값
     // 키워드로 장소를 검색합니다
+    
     searchPlaces();
 
     // 키워드 검색을 요청하는 함수입니다
@@ -759,7 +761,7 @@
       input_addr = document.getElementById('search_location').value;
       input_cat = document.getElementById('category').value;
       if (!input_addr.replace(/^\s+|\s+$/g, '')) {
-        alert('주소가 입력되어야 합니다.');
+        // alert('주소가 입력되어야 합니다.');
         return false;
       }
 
@@ -856,6 +858,9 @@
         alert("이미 가기로 했어요. 다른 곳을 알아보세요!");
         return false;
       }
+      var scrollPosition = $('#blank3').offset().top;
+      $('html, body').stop().animate( { scrollTop : scrollPosition-80}, 600 );
+    
 
       click_list.push(data);
       var clk_btns = document.querySelector('#click_list');
@@ -1020,7 +1025,18 @@
     $('#search').click(function () {
       $('#buttons_result').show();
     })
-
+    
+    
+    //스크롤 이동
+    $('#search').click(function () {
+      var scrollPosition = $('#result_title').offset().top;
+      $('html, body').stop().animate( { scrollTop : scrollPosition-80 }, 600 );
+    })
+    $('#add1').click(function () {
+      $('html, body').stop().animate( { scrollTop : 0 }, 600 );
+    })
+    
+    //로그인
     $('#logout').click(() => {
       $.ajax({
         url: "/sign/logout/",
