아이디 중복 추가중

--- a/mini_project/mapAPI/templates/mapAPI/main_v2.0.html
+++ b/mini_project/mapAPI/templates/mapAPI/main_v2.0.html
@@ -538,7 +538,8 @@
     </form>
   </div>
 
-  <div id="blank" class="container-fluid2 text-center"></div>
+  <div id="blank" class="container-fluid2 text-center">
+  </div>
 
   <div id="search_result" style="display:none;">
     <!-- Container (About Section) -->
@@ -587,11 +588,12 @@
           <h4 class="modal-title">회원가입</h4>
         </div>
         
-        <form action="{% url 'sign:join_post' %}" method="post">  
+        <form action="{% url 'sign:join' %}" method="post">  
             <div class="modal-body">
                     {% csrf_token %}                  
                     <label for="user_id">아이디</label>
-                    <input type="text" class="form-control" name="user_id"><br>
+                    <input type="text" class="form-control" name="user_id">
+                    <button type='button' id="join_id" class="btn btn-info">중복확인</button><p id="id_result"></p><br>
                     <label for="user_pw">비밀번호</label>
                     <input type="password" class="form-control" name="user_pw"><br>
                     <label for="user_pw2">비밀번호 재확인</label>
@@ -602,7 +604,7 @@
                     <input type="text" class="form-control" name="user_dog"><br>
             </div>
             <div class="modal-footer">
-                <input type="submit" class="btn btn-success" value="가입하기">
+                <input type="submit" class="btn btn-success" value="회원가입">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
             </div>
         </form>
@@ -623,16 +625,16 @@
           <div class="modal-body">
             {% csrf_token %}
             <label for="user_id">아이디</label>
-            <h1 name = "user_id" class="form-control">{{user.user_id}}</h1><br>
+            <h1 name = "user_id" class="form-control"></h1><br>
             <label for="user_pw">비밀번호</label>
-            <h1 name = "user_pw" class="form-control">{{user.user_pw}}</h1><br>
+            <h1 name = "user_pw" class="form-control"></h1><br>
             <label for="user_email">이메일</label>
-            <h1 name = "user_email" class="form-control">{{user.user_email}}</h1><br>
+            <h1 name = "user_email" class="form-control"></h1><br>
             <label for="user_dog">반려견명</label>
-            <h1 name = "user_dog" class="form-control">{{user.user_dog}}</h1><br>
+            <h1 name = "user_dog" class="form-control"></h1><br>
           </div>
           <div class="modal-footer">  
-              <button type="button" class="btn btn-success" data-toggle="modal" data-target="#modiinfo" id="modi_info" data-dismiss="modal">정보수정</button>
+              <button type="button" class="btn btn-success" data-toggle="modal" data-target="#modi" id="modibutton" data-dismiss="modal">정보수정</button>
               <input type="submit" class="btn btn-warning" value="회원탈퇴">
               <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
           </div>
@@ -642,7 +644,7 @@
   </div>
 
   <!-- 정보수정 -->
-  <div class="modal fade" id="modiinfo" role="dialog">
+  <div class="modal fade" id="modi" role="dialog">
     <div class="modal-dialog">
       <!-- Modal content-->
       <div class="modal-content col-sm-8 col-sm-offset-2">
@@ -1003,7 +1005,7 @@
 
     $('#my_page').click(() => {
       $.ajax({
-        url : "/sign/modi_info/",
+        url : "/sign/user_info/",
         success: function (data) {
           $('h1[name=user_id]').text(data.user_id);
           $('h1[name=user_pw]').text(data.user_pw);
@@ -1012,9 +1014,10 @@
         },  
       })
     })
-    $('#modi_info').click(() => {
+
+    $('#modibutton').click(() => {
       $.ajax({
-        url : "/sign/modi_info/",
+        url : "/sign/user_info/",
         success: function (data) {
           $('input[name=user_id]').val(data.user_id);
           $('input[name=user_pw]').val(data.user_pw);
@@ -1024,7 +1027,20 @@
       })
     })
 
-
+    $('#join_id').click(()=>{
+      $.ajax({
+        url : "/sign/id_check/",
+        data : {'user_id': $("[name=user_id]").val(),},
+        success : function(data) {
+          if(data['overlap'] == "fail"){
+            var p1 = document.getElementById("id_result")
+            p1.innerHTML = "중복된 아이디입니다."
+          } else {
+            p1.innerHTML = "사용 가능한 아이디입니다."
+          }
+        }
+      })
+    })
   </script>
 
 </body>
