디자인완성2

--- a/mini_project/mapAPI/templates/mapAPI/main_v2.0.html
+++ b/mini_project/mapAPI/templates/mapAPI/main_v2.0.html
@@ -540,7 +540,7 @@
               <label for="category"></label>
               <select class="form-control input-lg" id="category" value="카페" placeholder="카테고리"
                 style="margin-left: 70px;font-family: 나눔바른고딕 Light;">
-                <option value="애견카페">Category</option>
+                <option value="">Category</option>
                 <option value="애견카페">---------------------------------------</option>
                 <option value="애견카페">카페</option>
                 <option value="애견동반식당">음식점</option>
