--- a/mini_project/mapAPI/templates/mapAPI/main_v2.0.html
+++ b/mini_project/mapAPI/templates/mapAPI/main_v2.0.html
@@ -608,26 +608,27 @@
           <button type="button" class="close" data-dismiss="modal">&times;</button>
           <h4 class="modal-title">회원가입</h4>
         </div>
-        
-        <form action="{% url 'sign:join' %}" method="post">  
-            <div class="modal-body">
-                    {% csrf_token %}                  
-                    <label for="user_id">아이디</label>
-                    <input type="text" class="form-control" name="user_id">
-                    <button type='button' id="join_id" class="btn btn-info">중복확인</button><p id="id_result"></p><br>
-                    <label for="user_pw">비밀번호</label>
-                    <input type="password" class="form-control" name="user_pw"><br>
-                    <label for="user_pw2">비밀번호 재확인</label>
-                    <input type="password" class="form-control" name="user_pw2"><br>
-                    <label for="user_email">이메일</label>
-                    <input type="email" class="form-control" name="user_email"><br>
-                    <label for="user_dog">반려견명</label>
-                    <input type="text" class="form-control" name="user_dog"><br>
-            </div>
-            <div class="modal-footer">
-                <input type="submit" class="btn btn-success" value="회원가입">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-            </div>
+
+        <form action="{% url 'sign:join' %}" method="post">
+          <div class="modal-body">
+            {% csrf_token %}
+            <label for="user_id">아이디</label>
+            <input type="text" class="form-control" name="user_id">
+            <button type='button' id="join_id" class="btn btn-info">중복확인</button>
+            <p id="id_result"></p><br>
+            <label for="user_pw">비밀번호</label>
+            <input type="password" class="form-control" name="user_pw"><br>
+            <label for="user_pw2">비밀번호 재확인</label>
+            <input type="password" class="form-control" name="user_pw2"><br>
+            <label for="user_email">이메일</label>
+            <input type="email" class="form-control" name="user_email"><br>
+            <label for="user_dog">반려견명</label>
+            <input type="text" class="form-control" name="user_dog"><br>
+          </div>
+          <div class="modal-footer">
+            <input type="submit" class="btn btn-success" value="회원가입">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          </div>
         </form>
       </div>
     </div>
@@ -646,18 +647,19 @@
           <div class="modal-body">
             {% csrf_token %}
             <label for="user_id">아이디</label>
-            <h1 name = "user_id" class="form-control"></h1><br>
+            <h1 name="user_id" class="form-control"></h1><br>
             <label for="user_pw">비밀번호</label>
-            <h1 name = "user_pw" class="form-control"></h1><br>
+            <h1 name="user_pw" class="form-control"></h1><br>
             <label for="user_email">이메일</label>
-            <h1 name = "user_email" class="form-control"></h1><br>
+            <h1 name="user_email" class="form-control"></h1><br>
             <label for="user_dog">반려견명</label>
-            <h1 name = "user_dog" class="form-control"></h1><br>
+            <h1 name="user_dog" class="form-control"></h1><br>
           </div>
-          <div class="modal-footer">  
-              <button type="button" class="btn btn-success" data-toggle="modal" data-target="#modi" id="modibutton" data-dismiss="modal">정보수정</button>
-              <input type="submit" class="btn btn-warning" value="회원탈퇴">
-              <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-success" data-toggle="modal" data-target="#modi" id="modibutton"
+              data-dismiss="modal">정보수정</button>
+            <input type="submit" class="btn btn-warning" value="회원탈퇴">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
           </div>
         </form>
       </div>
@@ -739,13 +741,14 @@
 
 
   <div id="buttons_result" class="container-fluid" style="display:none;">
-    <button type="button" class="btn btn-default btn-block btn-lg" id="add1" style="width: 900px;margin:0 auto;font-family: 나눔바른고딕 Light;">다른 카테고리 검색하기</button>
-      검색</button>
+    <button type="button" class="btn btn-default btn-block btn-lg" id="add1"
+      style="width: 900px;margin:0 auto;font-family: 나눔바른고딕 Light;">다른 카테고리 검색하기</button>
+    검색</button>
     <form>
       <input type="hidden" value=click_list>
       <button type="submit" class="btn btn-default btn-block btn-lg bg-orange" id="close1"
-        style="width: 900px;margin:0 auto;margin-top: 10px;font-family: 나눔바른고딕 Light;" 
-        data-toggle="modal" data-target="#naver">선택한 장소들의 최적 경로 찾기</button>
+        style="width: 900px;margin:0 auto;margin-top: 10px;font-family: 나눔바른고딕 Light;" data-toggle="modal"
+        data-target="#naver">선택한 장소들의 최적 경로 찾기</button>
     </form>
   </div>
 
@@ -783,7 +786,7 @@
     var input_addr = "서울 강남구"; // 초기값
     var input_cat = "애견카페"; // 초기값
     // 키워드로 장소를 검색합니다
-    
+
     searchPlaces();
 
     // 키워드 검색을 요청하는 함수입니다
@@ -888,8 +891,8 @@
         return false;
       }
       var scrollPosition = $('#blank3').offset().top;
-      $('html, body').stop().animate( { scrollTop : scrollPosition-80}, 600 );
-    
+      $('html, body').stop().animate({ scrollTop: scrollPosition - 80 }, 600);
+
 
       click_list.push(data);
       var clk_btns = document.querySelector('#click_list');
@@ -1060,17 +1063,17 @@
     $('#search').click(function () {
       $('#buttons_result').show();
     })
-    
-    
+
+
     //스크롤 이동
     $('#search').click(function () {
       var scrollPosition = $('#result_title').offset().top;
-      $('html, body').stop().animate( { scrollTop : scrollPosition-80 }, 600 );
+      $('html, body').stop().animate({ scrollTop: scrollPosition - 80 }, 600);
     })
     $('#add1').click(function () {
-      $('html, body').stop().animate( { scrollTop : 0 }, 600 );
+      $('html, body').stop().animate({ scrollTop: 0 }, 600);
     })
-    
+
     //로그인
     $('#logout').click(() => {
       $.ajax({
@@ -1080,47 +1083,48 @@
         },
       })
 
-    $('#my_page').click(() => {
-      $.ajax({
-        url : "/sign/user_info/",
-        success: function (data) {
-          $('h1[name=user_id]').text(data.user_id);
-          $('h1[name=user_pw]').text(data.user_pw);
-          $('h1[name=user_email]').text(data.user_email);
-          $('h1[name=user_dog]').text(data.user_dog);
-        },  
-      })
-    })
-
-    $('#modibutton').click(() => {
-      $.ajax({
-        url : "/sign/user_info/",
-        success: function (data) {
-          $('input[name=user_id]').val(data.user_id);
-          $('input[name=user_pw]').val(data.user_pw);
-          $('input[name=user_email]').val(data.user_email);
-          $('input[name=user_dog]').val(data.user_dog);
-        },  
-      })
-      $('#close1').click(() => {
+      $('#my_page').click(() => {
         $.ajax({
+          url: "/sign/user_info/",
+          success: function (data) {
+            $('h1[name=user_id]').text(data.user_id);
+            $('h1[name=user_pw]').text(data.user_pw);
+            $('h1[name=user_email]').text(data.user_email);
+            $('h1[name=user_dog]').text(data.user_dog);
+          },
+        })
+      })
 
-    $('#join_id').click(()=>{
-      $.ajax({
-        url : "/sign/id_check/",
-        data : {'user_id': $("[name=user_id]").val(),},
-        success : function(data) {
-          if(data['overlap'] == "fail"){
-            var p1 = document.getElementById("id_result")
-            p1.innerHTML = "중복된 아이디입니다."
-          } else {
-            p1.innerHTML = "사용 가능한 아이디입니다."
-          }
-        }
+      $('#modibutton').click(() => {
+        $.ajax({
+          url: "/sign/user_info/",
+          success: function (data) {
+            $('input[name=user_id]').val(data.user_id);
+            $('input[name=user_pw]').val(data.user_pw);
+            $('input[name=user_email]').val(data.user_email);
+            $('input[name=user_dog]').val(data.user_dog);
+          },
+        })
+        $('#close1').click(() => {
+          $.ajax({})
+        })
+
+        $('#join_id').click(() => {
+          $.ajax({
+            url: "/sign/id_check/",
+            data: { 'user_id': $("[name=user_id]").val(), },
+            success: function (data) {
+              if (data['overlap'] == "fail") {
+                var p1 = document.getElementById("id_result")
+                p1.innerHTML = "중복된 아이디입니다."
+              } else {
+                p1.innerHTML = "사용 가능한 아이디입니다."
+              }
+            }
+          })
+        })
       })
     })
   </script>
-
 </body>
-
 </html>
