--- a/mini_project/mapAPI/templates/mapAPI/main_v2.0.html
+++ b/mini_project/mapAPI/templates/mapAPI/main_v2.0.html
@@ -774,6 +774,30 @@
     </form>
   </div>
 
+//출발지 입력
+    <div class="c_location">
+      <div class="row">
+        <div class="col-xs-3 col-sm-offset-2">
+          <h2 style="font-size: 10; font-family: 나눔바른고딕; ">출발지의 '도로명 주소'를 입력하세요
+            <br>
+          </h2>
+          <input type="text" class="form-control input-lg" name="search_location" id="search_location"
+          placeholder="도로명 주소 (ex. 서울 용산구 한강대로 405)" value="" class="pac-target-input" autocomplete="on"
+          style="margin-left: 80px;font-family: 나눔바른고딕 Light;">
+       </div>
+
+        <div class="search" style="float:left">
+          <div class="col-xs-4"></div>
+          <label for="search"></label>
+          <button type="submit" class="btn btn-lg" id="search"
+            style="margin-left: 60px; background-color: #2C3C5B; color: #EBEBEB;font-family: 나눔바른고딕 Light;"> 길찾기
+          </button>
+        </div>
+      </div>
+    </div>
+  
+
+
   <footer class="container-fluid text-center">
     <a href="#myPage" title="To Top">
       <span class="glyphicon glyphicon-chevron-up"></span>
