--- a/mini_project/mapAPI/templates/mapAPI/main_v2.0.html
+++ b/mini_project/mapAPI/templates/mapAPI/main_v2.0.html
@@ -608,26 +608,28 @@
           <button type="button" class="close" data-dismiss="modal">&times;</button>
           <h4 class="modal-title">회원가입</h4>
         </div>
-        
-        <form action="{% url 'sign:join' %}" method="post">  
-            <div class="modal-body">
-                    {% csrf_token %}                  
-                    <label for="user_id">아이디</label>
-                    <input type="text" class="form-control" name="user_id">
-                    <button type='button' id="join_id" class="btn btn-info">중복확인</button><p id="id_result"></p><br>
-                    <label for="user_pw">비밀번호</label>
-                    <input type="password" class="form-control" name="user_pw"><br>
-                    <label for="user_pw2">비밀번호 재확인</label>
-                    <input type="password" class="form-control" name="user_pw2"><br>
-                    <label for="user_email">이메일</label>
-                    <input type="email" class="form-control" name="user_email"><br>
-                    <label for="user_dog">반려견명</label>
-                    <input type="text" class="form-control" name="user_dog"><br>
-            </div>
-            <div class="modal-footer">
-                <input type="submit" class="btn btn-success" value="회원가입">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-            </div>
+
+        <form action="{% url 'sign:join' %}" method="post">
+          <div class="modal-body">
+            {% csrf_token %}
+            <label for="user_id">아이디</label>
+            <input type="text" class="form-control" name="join_id">
+            <button type='button' id="id_check" class="btn btn-info">중복확인</button>
+            <p id="id_result"></p><br>
+            <label for="join_pw">비밀번호</label>
+            <input type="password" class="form-control" name="join_pw"><br>
+            <label for="join_pw2">비밀번호 확인</label>
+            <input type="password" class="form-control" name="join_pw2" id="user_pw2">
+            <p id="pw_result"></p><br>
+            <label for="user_email">이메일</label>
+            <input type="email" class="form-control" name="user_email"><br>
+            <label for="user_dog">반려견명</label>
+            <input type="text" class="form-control" name="user_dog"><br>
+          </div>
+          <div class="modal-footer">
+            <input type="submit" class="btn btn-success" value="회원가입">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          </div>
         </form>
       </div>
     </div>
@@ -646,18 +648,19 @@
           <div class="modal-body">
             {% csrf_token %}
             <label for="user_id">아이디</label>
-            <h1 name = "user_id" class="form-control"></h1><br>
+            <h1 name="user_id" class="form-control"></h1><br>
             <label for="user_pw">비밀번호</label>
-            <h1 name = "user_pw" class="form-control"></h1><br>
+            <h1 name="user_pw" class="form-control"></h1><br>
             <label for="user_email">이메일</label>
-            <h1 name = "user_email" class="form-control"></h1><br>
+            <h1 name="user_email" class="form-control"></h1><br>
             <label for="user_dog">반려견명</label>
-            <h1 name = "user_dog" class="form-control"></h1><br>
+            <h1 name="user_dog" class="form-control"></h1><br>
           </div>
-          <div class="modal-footer">  
-              <button type="button" class="btn btn-success" data-toggle="modal" data-target="#modi" id="modibutton" data-dismiss="modal">정보수정</button>
-              <input type="submit" class="btn btn-warning" value="회원탈퇴">
-              <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-success" data-toggle="modal" data-target="#modi" id="modibutton"
+              data-dismiss="modal">정보수정</button>
+            <input type="submit" class="btn btn-warning" value="회원탈퇴">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
           </div>
         </form>
       </div>
@@ -739,13 +742,15 @@
 
 
   <div id="buttons_result" class="container-fluid" style="display:none;">
-    <button type="button" class="btn btn-default btn-block btn-lg" id="add1" style="width: 900px;margin:0 auto;font-family: 나눔바른고딕 Light;">다른 카테고리 검색하기</button>
-      검색</button>
+    <button type="button" class="btn btn-default btn-block btn-lg" id="add1"
+      style="width: 900px;margin:0 auto;font-family: 나눔바른고딕 Light;">다른 카테고리 검색하기</button>
+    검색</button>
     <form>
-      <input type="hidden" value=click_list>
-      <button type="submit" class="btn btn-default btn-block btn-lg bg-orange" id="close1"
-        style="width: 900px;margin:0 auto;margin-top: 10px;font-family: 나눔바른고딕 Light;" 
-        data-toggle="modal" data-target="#naver">선택한 장소들의 최적 경로 찾기</button>
+      <input type="hidden" name="click_list_input" value=click_list>
+      <button type="button" class="btn btn-default btn-block btn-lg bg-orange" id="close1"
+        style="width: 900px;margin:0 auto;margin-top: 10px;font-family: 나눔바른고딕 Light;" data-toggle="modal"
+        data-target="#naver">선택한 장소들의 최적 경로 찾기</button>
+        <p id="show_clicklist"></p1>
     </form>
   </div>
 
@@ -783,7 +788,7 @@
     var input_addr = "서울 강남구"; // 초기값
     var input_cat = "애견카페"; // 초기값
     // 키워드로 장소를 검색합니다
-    
+
     searchPlaces();
 
     // 키워드 검색을 요청하는 함수입니다
@@ -888,8 +893,8 @@
         return false;
       }
       var scrollPosition = $('#blank3').offset().top;
-      $('html, body').stop().animate( { scrollTop : scrollPosition-80}, 600 );
-    
+      $('html, body').stop().animate({ scrollTop: scrollPosition - 80 }, 600);
+
 
       click_list.push(data);
       var clk_btns = document.querySelector('#click_list');
@@ -1050,6 +1055,7 @@
         });
       });
     });
+    
     //화면 숨김, 보이기
     $('#search').click(function () {
       $('#blank').hide();
@@ -1065,12 +1071,26 @@
     //스크롤 이동
     $('#search').click(function () {
       var scrollPosition = $('#result_title').offset().top;
-      $('html, body').stop().animate( { scrollTop : scrollPosition-80 }, 600 );
+      $('html, body').stop().animate({ scrollTop: scrollPosition - 80 }, 600);
     })
     $('#add1').click(function () {
-      $('html, body').stop().animate( { scrollTop : 0 }, 600 );
+      $('html, body').stop().animate({ scrollTop: 0 }, 600);
     })
     
+    //click_list 보내기
+    $('#close1').click(() => {
+      let p1 = document.getElementById('show_clicklist') 
+      a = document.createElement("p")
+      a.value = click_list
+      p1.innerHTML = a
+      // $.ajax({
+      //   url : "/sign/click_list/",
+      //   data : { 'click_list': click_list, },
+      //   success: function (data) {
+      //     console.log(111)
+      //   }
+      // })
+    })
     //로그인
     $('#logout').click(() => {
       $.ajax({
@@ -1079,48 +1099,66 @@
           location = '/map/main/';
         },
       })
-
+    })
+    //내정보
     $('#my_page').click(() => {
       $.ajax({
-        url : "/sign/user_info/",
+        url: "/sign/user_info/",
         success: function (data) {
           $('h1[name=user_id]').text(data.user_id);
           $('h1[name=user_pw]').text(data.user_pw);
           $('h1[name=user_email]').text(data.user_email);
           $('h1[name=user_dog]').text(data.user_dog);
-        },  
+        },
       })
     })
-
+    //내정보 수정
     $('#modibutton').click(() => {
       $.ajax({
-        url : "/sign/user_info/",
+        url: "/sign/user_info/",
         success: function (data) {
           $('input[name=user_id]').val(data.user_id);
           $('input[name=user_pw]').val(data.user_pw);
           $('input[name=user_email]').val(data.user_email);
           $('input[name=user_dog]').val(data.user_dog);
-        },  
+        },
       })
-      $('#close1').click(() => {
-        $.ajax({
-
-    $('#join_id').click(()=>{
+    })
+    //아이디 중복 검사
+    $('#id_check').click(() => {
       $.ajax({
-        url : "/sign/id_check/",
-        data : {'user_id': $("[name=user_id]").val(),},
-        success : function(data) {
-          if(data['overlap'] == "fail"){
+        url: "/sign/id_check/",
+        data: { 'user_id': $("[name=join_id]").val(), },
+        success: function (data) {
+          if (data['overlap'] == "fail") {
             var p1 = document.getElementById("id_result")
             p1.innerHTML = "중복된 아이디입니다."
           } else {
+            var p1 = document.getElementById("id_result")
             p1.innerHTML = "사용 가능한 아이디입니다."
           }
         }
       })
     })
+    //비밀번호 중복 검사
+    $('#user_pw2').change(() => {
+      $.ajax({
+        url: "/sign/pw_check/",
+        data: { 'join_pw': $("[name=join_pw]").val(),
+        'join_pw2': $("[name=join_pw2]").val(),
+      },
+        success: function (data) {
+          if (data['overlap'] == "fail") {
+            var p1 = document.getElementById("pw_result")
+            p1.innerHTML = "비밀번호가 다릅니다"
+          } else {
+            var p1 = document.getElementById("pw_result")
+            p1.innerHTML = "사용 가능한 비밀번호 입니다."
+          }
+        }
+      })
+    })
   </script>
-
 </body>
 
 </html>
