--- a/mini_project/mapAPI/templates/mapAPI/main_v2.0.html
+++ b/mini_project/mapAPI/templates/mapAPI/main_v2.0.html
@@ -537,7 +537,7 @@
     </div>
   </nav>
 
-  <div class="jumbotron text-center" style="height:410px">
+  <div class="jumbotron text-center">
     <h5>댕댕이와 함께할 장소는 어디인가요?</h5>
     <h3>함께가개에서 반려견과 함께할 여정을 계획해보세요</h3>
 
@@ -765,7 +765,6 @@
   <div id="buttons_result" class="container-fluid" style="display:none;">
     <button type="button" class="btn btn-default btn-block btn-lg" id="add1"
       style="width: 900px;margin:0 auto;font-family: 나눔바른고딕 Light;">다른 카테고리 검색하기</button>
-    검색</button>
     <form>
       <input type="hidden" value=click_list>
       <button type="submit" class="btn btn-default btn-block btn-lg bg-orange" id="close1"
@@ -774,27 +773,29 @@
     </form>
   </div>
 
-//출발지 입력
-    <div class="c_location">
-      <div class="row">
-        <div class="col-xs-3 col-sm-offset-2">
-          <h2 style="font-size: 10; font-family: 나눔바른고딕; ">출발지의 '도로명 주소'를 입력하세요
-            <br>
-          </h2>
-          <input type="text" class="form-control input-lg" name="search_location" id="search_location"
-          placeholder="도로명 주소 (ex. 서울 용산구 한강대로 405)" value="" class="pac-target-input" autocomplete="on"
-          style="margin-left: 80px;font-family: 나눔바른고딕 Light;">
-       </div>
+<!-- 출발지 입력 -->
 
-        <div class="search" style="float:left">
-          <div class="col-xs-4"></div>
-          <label for="search"></label>
-          <button type="submit" class="btn btn-lg" id="search"
-            style="margin-left: 60px; background-color: #2C3C5B; color: #EBEBEB;font-family: 나눔바른고딕 Light;"> 길찾기
-          </button>
+  <div id="blank4" class="container-fluid2 text-center" style="height: 80px">
+    <h2 style="font-size: 10; font-family: 나눔바른고딕;">출발지의 '도로명 주소'를 입력하세요</h2>
+  </div>
+
+  <div id="c_location" class="container-fluid2 text-center" style="height: 80px">
+    <div class="row">
+      <div class="col-xs-12">    
+        <input type="text" class="form-control input-lg " name="search_location" id="search_location"
+        placeholder="도로명 주소 (ex. 서울 용산구 한강대로 405)" value="" class="pac-target-input" autocomplete="on"
+        style="font-family: 나눔바른고딕 Light;width: 500px; display: inline-block;">
+        <button type="submit" class="btn btn-lg bg-orange" id="c_search" style="font-family: 나눔바른고딕 Light;"> 경로 찾기</button>
+     
+        <div class="c_search">
+          <!-- <div class="col-xs-4"></div> -->
+            <!-- <label for="c_search"></label> -->
+            
         </div>
       </div>
     </div>
+  </div>
+ 
   
 
 
