--- a/mini_project/mapAPI/templates/mapAPI/main_v2.0.html
+++ b/mini_project/mapAPI/templates/mapAPI/main_v2.0.html
@@ -766,7 +766,7 @@
   <div id="buttons_result" class="container-fluid" style="display:none;">
     <button type="button" class="btn btn-default btn-block btn-lg" id="add1"
       style="width: 900px;margin:0 auto;font-family: 나눔바른고딕 Light;">다른 카테고리 검색하기</button>
-    검색</button>
+    
     <form>
       <input type="hidden" name="click_list_input" value=click_list>
       <button type="button" class="btn btn-default btn-block btn-lg bg-orange" id="close1"
@@ -778,17 +778,17 @@
 
 <!-- 출발지 입력 -->
 
-  <div id="blank4" class="container-fluid2 text-center" style="height: 80px">
+  <div id="blank4" class="container-fluid2 text-center" style="height: 80px; display: none;">
     <h2 style="font-size: 10; font-family: 나눔바른고딕;">출발지의 '도로명 주소'를 입력하세요</h2>
   </div>
 
-  <div id="c_location" class="container-fluid2 text-center" style="height: 80px">
+  <div id="c_location" class="container-fluid2 text-center" style="height: 80px;display: none;">
     <div class="row">
       <div class="col-xs-12">    
         <input type="text" class="form-control input-lg " name="search_location" id="search_location"
         placeholder="도로명 주소 (ex. 서울 용산구 한강대로 405)" value="" class="pac-target-input" autocomplete="on"
         style="font-family: 나눔바른고딕 Light;width: 500px; display: inline-block;">
-        <button type="submit" class="btn btn-lg bg-orange" id="c_search" style="font-family: 나눔바른고딕 Light;"> 경로 찾기</button>
+        <button type="submit" class="btn btn-lg bg-orange" id="c_search" style="font-family: 나눔바른고딕 Light;">경로 찾기</button>
      
         <div class="c_search">
           <!-- <div class="col-xs-4"></div> -->
@@ -1114,6 +1114,14 @@
     $('#search').click(function () {
       $('#buttons_result').show();
     })
+    $('#close1').click(function () {
+      $('#blank4').show();
+    })
+    $('#close1').click(function () {
+      $('#c_location').show();
+    })
+
+
 
 
     //스크롤 이동
