--- a/mini_project/mapAPI/templates/mapAPI/main_v2.0.html
+++ b/mini_project/mapAPI/templates/mapAPI/main_v2.0.html
@@ -557,7 +557,7 @@
               <label for="category"></label>
               <select class="form-control input-lg" id="category" value="카페" placeholder="카테고리"
                 style="margin-left: 70px;font-family: 나눔바른고딕 Light;">
-                <option value="">Category</option>
+                <option value="애견카페">Category</option>
                 <option value="애견카페">---------------------------------------</option>
                 <option value="애견카페">카페</option>
                 <option value="애견동반식당">음식점</option>
@@ -770,13 +770,13 @@
     <form>
       <input type="hidden" name="click_list_input" value=click_list>
       <button type="button" class="btn btn-default btn-block btn-lg bg-orange" id="close1"
-        style="width: 900px;margin:0 auto;margin-top: 10px;font-family: 나눔바른고딕 Light;" data-toggle="modal"
-        data-target="#naver">선택한 장소들의 최적 경로 찾기</button>
-        <p id="show_clicklist"></p1>
+        style="width: 900px;margin:0 auto;margin-top: 10px;font-family: 나눔바른고딕 Light;">선택한 장소들의 최적 경로 찾기</button>
+      <p id="show_clicklist">
+        </p1>
     </form>
   </div>
 
-<!-- 출발지 입력 -->
+  <!-- 출발지 입력 -->
 
   <div id="blank4" class="container-fluid2 text-center" style="height: 80px">
     <h2 style="font-size: 10; font-family: 나눔바른고딕;">출발지의 '도로명 주소'를 입력하세요</h2>
@@ -784,22 +784,23 @@
 
   <div id="c_location" class="container-fluid2 text-center" style="height: 80px">
     <div class="row">
-      <div class="col-xs-12">    
+      <div class="col-xs-12">
         <input type="text" class="form-control input-lg " name="search_location" id="search_location"
-        placeholder="도로명 주소 (ex. 서울 용산구 한강대로 405)" value="" class="pac-target-input" autocomplete="on"
-        style="font-family: 나눔바른고딕 Light;width: 500px; display: inline-block;">
-        <button type="submit" class="btn btn-lg bg-orange" id="c_search" style="font-family: 나눔바른고딕 Light;"> 경로 찾기</button>
-     
+          placeholder="도로명 주소 (ex. 서울 용산구 한강대로 405)" value="" class="pac-target-input" autocomplete="on"
+          style="font-family: 나눔바른고딕 Light;width: 500px; display: inline-block;">
+        <button type="button" class="btn btn-lg bg-orange" id="c_search" style="font-family: 나눔바른고딕 Light;"
+          data-toggle="modal" data-target="#naver"> 경로 찾기</button>
+
         <div class="c_search">
           <!-- <div class="col-xs-4"></div> -->
-            <!-- <label for="c_search"></label> -->
-            
+          <!-- <label for="c_search"></label> -->
+
         </div>
       </div>
     </div>
   </div>
- 
-  
+
+
 
 
   <footer class="container-fluid text-center">
@@ -1103,7 +1104,7 @@
         });
       });
     });
-    
+
     //화면 숨김, 보이기
     $('#search').click(function () {
       $('#blank').hide();
@@ -1124,10 +1125,10 @@
     $('#add1').click(function () {
       $('html, body').stop().animate({ scrollTop: 0 }, 600);
     })
-    
+
     //click_list 보내기
     $('#close1').click(() => {
-      let p1 = document.getElementById('show_clicklist') 
+      let p1 = document.getElementById('show_clicklist')
       a = document.createElement("p")
       a.value = click_list
       p1.innerHTML = a
@@ -1192,9 +1193,10 @@
     $('#user_pw2').change(() => {
       $.ajax({
         url: "/sign/pw_check/",
-        data: { 'join_pw': $("[name=join_pw]").val(),
-        'join_pw2': $("[name=join_pw2]").val(),
-      },
+        data: {
+          'join_pw': $("[name=join_pw]").val(),
+          'join_pw2': $("[name=join_pw2]").val(),
+        },
         success: function (data) {
           if (data['overlap'] == "fail") {
             var p1 = document.getElementById("pw_result")
@@ -1208,4 +1210,5 @@
     })
   </script>
 </body>
+
 </html>
