금요일 9:37 인환

--- a/mini_project/mapAPI/templates/mapAPI/main_v2.0.html
+++ b/mini_project/mapAPI/templates/mapAPI/main_v2.0.html
@@ -651,7 +651,6 @@
             <input type="submit" class="btn bg-orange" value="회원가입">
             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
           </div>
-          >>>>>>> origin/kakao_API_hj
         </form>
       </div>
     </div>
@@ -759,7 +758,9 @@
   </div>
 
   <div class="container-fluid bg-grey" style="width: 1070px;">
-    <div id="click_list"></div>
+    <form>
+      <div id="click_list"></div>
+    </form>
   </div>
 
 
@@ -792,8 +793,7 @@
      
         <div class="c_search">
           <!-- <div class="col-xs-4"></div> -->
-            <!-- <label for="c_search"></label> -->
-            
+            <!-- <label for="c_search"></label> -->            
         </div>
       </div>
     </div>
