--- a/mini_project/mapAPI/templates/mapAPI/main_v2.0.html
+++ b/mini_project/mapAPI/templates/mapAPI/main_v2.0.html
@@ -938,7 +938,7 @@
     }
 
     function pushClickList(data) {
-      if (click_list.length >= 7) {
+      if (click_list.length >= 6) { // 출발지 포함 7개
         alert("오늘 안에 여기를 다 도시려고요? 못해요!");
         return false;
       }
